src/pages/my/$detail/components/detail/css/item.scss
.list {
    padding-bottom: 65px;
}

.item {
    height: 120px;
    line-height: 100px;
    padding: 10px;
    border-bottom: 1px solid rgba(7,17,27,.1);
}
.item img{
    width: 80px;
    height: 80px;
}

.itemtitle {
    padding-left:10px 0px 10px 14px;
    height: 25px;
    line-height: 25px;
    border-left: 2px solid #d9dde1;
    font-size: 12px;
    color: #93999f;
    background-color: #f3f5f7;
}

.sale{
    color: #93999f;
    font-size: 10px;
    margin-top: 15px;
    line-height: 10px;

}

.price{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    color: #f01414;
    font-size: 14px;
    margin-top: 10px;
    font-weight: bold;
}

.detailbutton {
    width: 60px;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: space-around;
}

.decrease {
    background: #1296db;
    width: 20px;
    height: 20px;
    border-radius: 10px;
    line-height: 20px;
    text-align: center;
}

.detailbutton img {
    width: 18px;
    height: 18px;
    padding-bottom: 3px;
}

.plus {
    background: #1296db;
    width: 20px;
    height: 20px;
    border-radius: 10px;
    line-height: 20px;
    text-align: center;
}

.listItem {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    height: 35px;
    line-height: 35px;
}

.list_title {
    width: 25%;
    height: 100%;
    text-align: center;
}

.list_price {
    width: 35%;
    height: 100%;
    text-align: center;
    color: #f01414;
    font-size: 14px;
    font-weight: bold;
}

.detail_button {
    width: 60px;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: space-around;
    margin-right: 25px; 
}

.detail_button img {
    width: 18px;
    height: 18px;
}


.footeritem {
    display: flex;
    flex-direction: column;
    width: 100%;
    background: #fff;
}

